# test-boilerplate

./: .gitignore  README.md
back/: .env.exemple  Cargo.toml  README.md  Rocket.example.toml  Rocket.toml  Rocket.toml.example
back/migrations/20250204141630_create_tasks_table/: up.sql
back/src/: lib.rs  main.rs  pagination.rs  schema.rs  task.rs
front/: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
front/src/lib/: types.ts
front/src/lib/stores/: tasks.ts
front/src/lib/styles/: _variables.scss
front/src/lib/types/: index.ts  task.ts
front/src/routes/: +page.svelte  +page.ts
front/src/routes/api/task/: +server.ts  types.ts
front/src/routes/api/task/[id]/: +server.ts
front/src/routes/api/task/[id]/toggle/: +server.ts
front/src/routes/api/task/all/: +server.ts
